2022-06-08  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.8-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8-alpha02: fxm';git push
	git tag -a 5.0.8-alpha02 -m 'Vienna';git push --tags

	* Filter handler works on multiple variables

	* Filter handler applies CCR filters as requested, and copies filters used in input files on one variable

	* Completely re-write filter handling to copy generic filters from input files

2022-05-27  Charlie Zender  <zender@uci.edu>

	* Allow use of netCDF-defined APIs for BitGroom, GranularBR, BitRound

2022-05-26  Charlie Zender  <zender@uci.edu>

	* Allow use of netCDF-defined APIs for BZIP2, ZSTANDARD, BLOSC

	* Add netCDF 4.9.0 BLOSC filters to table

	* Implement nco_inq_filter_avail() and stubs for pre-4.9.0

	* Print info for multiple filters per variable separated by pipes

	* Remove extra quotes form multi-word format names in _Format attribute

2022-05-25  Charlie Zender  <zender@uci.edu>

	* Fix so CCR codecs work, including codec chains

2022-05-24  Charlie Zender  <zender@uci.edu>

	* Quiet hocus-pocus INFO message

	* Use nco_flt_glb_lss/lsl_alg/lvl values with CCR codecs

2022-05-23  Charlie Zender  <zender@uci.edu>

	* Add nco_flt_glb_lss/lsl_alg/lvl_get/set() helper functions

2022-05-22  Charlie Zender  <zender@uci.edu>

	* Update to MacOS 12.4

2022-05-18  Charlie Zender  <zender@uci.edu>

	* Compile/link (except ncap2) on perlmutter, runtime fails due to missing librca.so*

	* ncclimo/ncremap add draft NERSC Perlmutter settings

2022-05-04  Charlie Zender  <zender@uci.edu>

	* Complete refactoring to test more codecs with nco_tst_def_*() functions

	* Adopt nco_flt_def_*() in nco_var_utl.c

2022-05-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.8-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8-alpha01: Functionally identical to 5.0.7';git push
	git tag -a 5.0.8-alpha01 -m 'QuickBlade';git push --tags
