@@ -1,10 +1,16 @@
-2022-06-08  Charlie Zender  <zender@uci.edu>
+2022-06-09  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.0.8-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.0.8-alpha02: fxm';git push
 	git tag -a 5.0.8-alpha02 -m 'Vienna';git push --tags
 
-	* Filter handler works on multiple variables
+	* Do not print _DeflateLevel or _Shuffle if a non-DEFLATE filter was applied
+
+	* Draft filter handler works on old-style DEFLATE specification (e.g., -L 1)
+
+2022-06-08  Charlie Zender  <zender@uci.edu>
+
+	* Draft filter handler works on multiple variables
 
 	* Filter handler applies CCR filters as requested, and copies filters used in input files on one variable
 
